More statement changes

--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -7,7 +7,8 @@ layout: layouts/standard.njk
 <div class="about">
 <img class="me" src="{{ '/images/me.png' | url }}" />
 <p>
-<strong>Natalie Dixon</strong> is a self-taught artist based in London, UK. Her childhood mainly involved drawing pictures and writing words next to them; not much has changed. An English degree nourished an early love of stories and mythology, but unfortunately suppressed her visual side. In 2019, however, a personal crisis revealed that some things are beyond words. An emotional landscape unfolded, and she began painting in earnest, drawing on a palette discovered in earlier travels: the breadth and beauty of nature, and the world of visionary and psychedelic art. After attending workshops run by artists <a href="https://www.danielmirante.com/">Daniel Mirante</a> and <a href="https://www.amandasage.com/">Amanda Sage</a>, she began a life-long work of integration, mapping nature to emotion, soul to matter, and stories to the human form.</p>
+Natalie Dixon is a self-taught artist based in London, UK. Her childhood mainly involved drawing pictures and writing words next to them; not much has changed. An early urge to express and tell stories led to an English degree, opening imaginary worlds but suppressing her visual side. In 2019, however, a personal crisis revealed that some things are beyond words. An emotional landscape unfolded, and she began painting in earnest, drawing on a palette discovered in earlier travels: the breadth and beauty of nature, and the world of visionary and psychedelic art. After attending workshops run by artists Daniel Mirante and Amanda Sage, she began a life-long work of integration, mapping nature to emotion, soul to matter, and stories to the human form.
+</p>
 </div>
 <p>Since 2020 her work has featured in several online exhibitions, including the 2021 In the Wild exhibition hosted by The Artist Lounge, in which her work ‘In their arms’ was a semi-finalist. She exhibits in person at festivals (Something Different, Lovejam Campout, Anthropos) , enjoying the opportunity for inspiration and direct connection. Working in oils and acrylic, she explores the link between the outer world and inner truths, and the mythic nature of individual transformation.
    </p>
@@ -16,14 +17,13 @@ layout: layouts/standard.njk
 <div class="about">
 
 <div>
-<p>I paint in response to emotion. My paintings are acts of honesty that provoke honesty in turn: a real response in the viewer, a feeling or a memory. I paint because I can only understand my experiences through image-making, and want to transmit that understanding. Surrealism, fantastic realism, visionary art and Jungian psychology are all major influences because metaphor allows me to touch the personal and make it general. They are tools that help unveil the real magic of life. I endeavour to find the ‘archetype’ of the experience, and often switch between layered indirect techniques to communicate the numinous, and direct painting to express the concrete.</p>
+<p>I paint in response to emotion. My paintings are acts of honesty that provoke honesty in turn: a real response in the viewer, a feeling or a memory. I paint because I can only understand my experiences through image-making, and want to transmit that understanding. Surrealism, fantastic realism, visionary art and Jungian psychology are all major influences because metaphor allows me to touch the personal and make it general. They help unveil the real magic of life. I endeavour to find the ‘archetype’ of the experience, and often switch between layered indirect techniques to communicate the numinous, and direct painting to express the concrete.</p>
 
 <p>I also paint from a joy in the rhythm of the human body, and from a wonder at the shifting of light and shadow over a mountainside, and from grief at an achingly brilliant yet transient sky… It’s all emotion, manifested.</p>
 
 </div>
 <img class="anthropos" src="{{ '/images/anthropos.jpg' | url }}" />
 </div>
-   <p>I draw on mythology, esoteric symbolism and nature to pursue themes of rebirth, loss and healing, and through tonal contrasts and flowing lines, I convey the potential for change - the motion ever-present in our hearts and in the world around us. Inspired by the visionary art movement to blend internal and external worlds, and by animation and comic art to capture the essence of a movement or feeling, I hope to avoid the possible ‘easy answers’ of those traditions, and to tell the truth: the flux in us is the flux of nature, beautiful yet bloody.</p>
-
+<p>The story I take my scenes from is chosen from nature: the eternal cycle of death and rebirth, of loss and healing. Through tonal contrasts and flowing lines, I convey the motion ever-present in our hearts and in the world around us, and always the potential for change.</p>
 </section>
 </div>
