add rudimentary portraits page

--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -3,7 +3,10 @@
 <div class="nav-container">
   <ul class="nav">
     <li>
-      <a href="/gallery">Artwork</a>
+      <a href="/gallery">Paintings</a>
+    </li>
+    <li>
+       <a href="/portraits">Portraits</a>
     </li>
     <li>
       <a href="/about">About</a>
