--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -21,9 +21,10 @@ Natalie Dixon is a self-taught artist based in London, UK. Her childhood mainly 
 
 <p>I also paint from a joy in the rhythm of the human body, and from a wonder at the shifting of light and shadow over a mountainside, and from grief at an achingly brilliant yet transient sky… It’s all emotion, manifested.</p>
 
+<p>The story I take my scenes from is told by nature: the eternal cycle of death and rebirth, loss and healing. Through tonal contrasts and flowing lines, I convey the motion ever-present in our hearts and in the world around us, and always the potential for change.</p>
+
 </div>
 <img class="anthropos" src="{{ '/images/anthropos.jpg' | url }}" />
 </div>
-<p>The story I take my scenes from is chosen from nature: the eternal cycle of death and rebirth, of loss and healing. Through tonal contrasts and flowing lines, I convey the motion ever-present in our hearts and in the world around us, and always the potential for change.</p>
 </section>
 </div>
