temporarily hardcode images

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -5,9 +5,10 @@ data: descriptions
 <section>
 <article>
 <ul class="featured">
-{% for image in collections.paintings | getFeatured %}
-<li><a href="/artwork/{{image.name}}"><img src="{{ image.path | relative | url }}" class="home-item__image artwork" /></a></li>
-{% endfor %}
+<li><a href="/artwork/in-their-arms/index.html"><img src="/images/paintings/05-in-their-arms@1x.jpg" class="home-item__image artwork" /></a></li>
+<li><a href="/portraits"><img src="/images/portraits/05-midnight@1x.jpg" class="home-item__image artwork" /></a></li>
+<li><a href="/artwork/renaissance/index.html"><img src="/images/paintings/11-renaissance@1x.jpg" class="home-item__image artwork" /></a></li>
+<li><a href="/artwork/creatrix/index.html"><img src="/images/paintings/04-creatrix@1x.jpg" class="home-item__image artwork" /></a></li>
 </ul>
 </article>
 <article><h2>2022 Shows</h2</article>
