Add/rename Albedo, and update shows

--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -27,4 +27,15 @@ Natalie Dixon is a self-taught artist based in London, UK. Her childhood mainly 
 <img class="anthropos" src="{{ '/images/anthropos.jpg' | url }}" />
 </div>
 </section>
+
+<article>
+<h3>Past Shows </h3>
+<p class="show show--done"><a class="show-link" href="#">8th Toronto Visionary Art Exhibition, Dec 2022</a></p>
+<p class="show show--done"><a class="show-link" href="https://www.outtograss.com/something-different-2022/">Something Different</a>, 13-16th May 2022</p>
+<p class="show show--done"><a class="show-link" href="https://anthroposfestival.org/">Anthropos Festival</a>, 8-12th September 2022</p>
+<p class="show show--done"><a class="show-link" href="https://www.lovejam.community/event-details/lovejam-campout-2022">Lovejam Campout</a>, 22-26th September 2022</p>
+<p class="show show--done"><a class="show-link" href="http://www1.theartistlounge.org/?tm=1&subid4=1684514047.0257260000">Into the Wild online exhibition, May 2021</a></p>
+<p class="show show--done"><a class="show-link" href="https://www.visiontrain.org/transition.html">Transition online exhibition, March 2021</a></p>
+<p class="show show--done"><a class="show-link" href="https://www.visiontrain.org/mushroommagic.html">Mushroom Magic online exhibition, Aug 2020</a></p>
+</article>
 </div>
