--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -8,13 +8,13 @@ data: descriptions
 <li><a href="/artwork/in-their-arms/index.html"><img src="/images/paintings/05-in-their-arms@1x.jpg" class="home-item__image artwork" /></a></li>
 <li><a href="/portraits"><img src="/images/portraits/05-midnight@1x.jpg" class="home-item__image artwork" /></a></li>
 <li><a href="/artwork/renaissance/index.html"><img src="/images/paintings/11-renaissance@1x.jpg" class="home-item__image artwork" /></a></li>
-<li><a href="/artwork/creatrix/index.html"><img src="/images/paintings/04-creatrix@1x.jpg" class="home-item__image artwork" /></a></li>
+<li><a href="/artwork/albedo/index.html"><img src="/images/paintings/04-albedo@1x.jpg" class="home-item__image artwork" /></a></li>
 </ul>
 </article>
-<article><h2>2022 Shows</h2</article>
-<p class="show show--done"><a class="show-link" href="https://www.outtograss.com/something-different-2022/">Something Different</a>, 13-16th May 2022</p>
-<p class="show"><a class="show-link" href="https://anthroposfestival.org/">Anthropos Festival</a>, 8-12th September 2022</p>
-<p class="show"><a class="show-link" href="https://www.lovejam.community/event-details/lovejam-campout-2022">Lovejam Campout</a>, 22-26th September 2022</p>
+<article>
+<h2>2023 Shows</h2>
+<p class="show"><a class="show-link" href="https://noisilyfestival.com/">Noisily Festival</a>, 6-9th July 2023</p>
+</article>
 </section>
 
 
