--- a/src/_layouts/home.njk
+++ b/src/_layouts/home.njk
@@ -5,7 +5,7 @@ data: descriptions
 
 <ul class="featured">
   <li><a href="/artwork/in-their-arms/index.html"><img src="/assets/images/paintings/05-in-their-arms@1x.jpg" class="home-item__image artwork" /></a></li>
-  <li><a href="/portraits"><img src="/assets/images/portraits/05-midnight@1x.jpg" class="home-item__image artwork" /></a></li>
+  <li><a href="/portraits"><img src="/assets/images/portraits/midnight.jpg" class="home-item__image artwork" /></a></li>
   <li><a href="/artwork/renaissance/index.html"><img src="/assets/images/paintings/11-renaissance@1x.jpg" class="home-item__image artwork" /></a></li>
   <li><a href="/artwork/albedo/index.html"><img src="/assets/images/paintings/04-albedo@1x.jpg" class="home-item__image artwork" /></a></li>
 </ul>
