--- a/src/assets/css/global/global-styles.css
+++ b/src/assets/css/global/global-styles.css
@@ -11,6 +11,7 @@ body {
   font-family: var(--font-base);
   line-height: 1.8;
   letter-spacing: var(--tracking);
+  position: relative;
 }
 
 @media screen and (max-width: 600px) {
@@ -108,6 +109,10 @@ a:hover {
 
 :target {
   scroll-margin-top: 2ex;
+}
+
+main {
+  padding-bottom: var(--space-s-m);
 }
 
 main:focus {
